[package]
name = "kaos"
version = "0.1.0"
edition = "2018"
authors = ["Kent Utterback <utterback.kent.a@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[unstable]
build-std-features = ["compiler-builtins-mem"]
build-std = ["core", "compiler_builtins"]

[build]
target = "x86_64-kaos.json"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[target.'cfg(target_os = "none")']
runner = "bootimage runner"

[dependencies]
bootloader = "*" #TODO: Create Custom Bootloader

